$Id$

2.1.1-pre-1
	Only print forced AIM logout message once.
	Don't bind F1 to help in edit context
	Fix bug in 'getsubs' with no tickets
	New code for getting users from .anyfile
	Added the 'pseudologins' variable, and code to do it
	new attributes 'pseudo' 'logintty' and 'loginhost'
	Don't print extra new lines in popless_file
	
2.0.14
	Fixed missing word in startup message
	Better 'status' command
	Use '+' for popwin corners when 'fancylines' is off
	Allow TERMINFO to be overridden in the envrionment
	Command line arg -D turns on debugging and deletes previous
	  debugging file
	Do ~ expansion in 'dump' command.
	Current directory added to 'status' command
	Massive changes to libfaim and aim
	
2.0.13
	Changed startup message for new mailing list
	blist now prints AIM info even if .anyone is unreadable
	Catch SIGPIPE and print an error rather than crashing.
	        [It's possible that this may have some portability 
		issues under Solaris and we may need to add some 
		configure stuff around SA_SIGINFO...]
	Handle the case in aim_bstream_send where aim_send returns -1,
	        although there is likely an underlying problem here
		that would lead to this case.
	Print the username on aim login failure, not something random like
	        the password.  ;)
	Un-word-wrap text when sending AIM messages.
	Replace the main loop continue in the keyboard handler with an else.
	
2.0.12
	Command history now doesn't allow the last entry
	   to be repeated
	If format_msg returns "" print "<unformatted message>"
	Better align oneline admin and loopback messages
	Print an admin message indicating when subscriptions can
	   not be loaded on startup
	Set aim_ignorelogin_timer to 15 by default
	Admin message on login/logout of AIM
	Fixed double quoting in smartzpunt
	Added timestamp to login/logout messages
	Fixed replies to loopback messages
	Fixed smartnarrow on classes/instances with spaces
	Added the 'loggingdirection' variable
	All loopback messages log to 'loopback' now