@@ -8,6 +8,7 @@ $Id$
 	Added the 'pseudologins' variable, and code to do it
 	new attributes 'pseudo' 'logintty' and 'loginhost'
 	Don't print extra new lines in popless_file
+	New zephyr_get_field function
 	
 2.0.14
 	Fixed missing word in startup message
